deploy/jasperReports/jasper-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jasper-service
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /srv/jasper-service
