deploy/jasperReports/jasper-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jasper-reports
  labels:
    app: jasper-reports

spec:
  replicas: 1
  selector:
    matchLabels:
      app: jasper-reports
  template:
    metadata:
      labels:
        app: jasper-reports
    spec:
      containers:
        - name: jasper-reports
          image: jasperserver-pro:latest
          ports:
            - name: web
              containerPort: 8080
