deploy/jasperReports/jasper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jasper-reports

spec:
  ports:
    - name: web
      port: 8080
      targetPort: web

  selector:
    app: jasper-reports
