deploy/jasperReports/jasper-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jasper-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-jasper-service@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /srv/jasper-service
        pathType: Prefix
        backend:
          service:
            name: jasper-service
            port:
             name: web
